# MemoryAllocater

./: .gitignore  CMakeLists.txt  Hole.h  MemoryManager.cpp  MemoryManager.h  Process.h  README.md  Segment.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: windows-build.yml
